@@ -492,3 +492,4 @@ in 0.1.13.
 ------
 - rudimentary HDF <-> Data1D interconversion. This is functionality that might
   be subject to change, so the functions are prefixed by "_".
+- added TOF simulation to reduction code.
